--- a/quantifySelf/fitquant.html
+++ b/quantifySelf/fitquant.html
@@ -14,7 +14,7 @@
   <div id="row">
     <div class="col-md-10 col-md-offset-1">
       <h4>Design Question</h4>
-      <p>Is there a relationship between the amount of sleep and amount of physical activity I perform?</p>
+      <p>Is there a relationship between the amount of sleep I get and amount of physical activity I perform?</p>
       <br>
       <h4>Data</h4>
       <p>Fitbit has a user portal that allows the user to export data to a CSV file. Unfortunately, Fitbit only allows the user to download 31 days of data at one time. I made 8 downloads, one for each month I have worn a Fitbit, and then combined them all to into a single CSV file.</p>
